<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/beach"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <!-- Background Overlay for better readability -->
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#AA000000"/> <!-- Semi-transparent black -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/logo"
            android:layout_marginTop="24dp" />

        <EditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/username_input"
            android:inputType="text"
            android:padding="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password_input"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="18sp"
            android:background="@drawable/rounded_edittext"
            android:padding="16dp"
            android:inputType="textPassword"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_btn"
            android:backgroundTint="@color/dark_blue"
            android:textColor="@color/white"
            android:padding="12dp"
            android:layout_marginTop="24dp"
            android:textSize="18sp"
            android:id="@+id/login_btn"/>

        <Button
            android:id="@+id/reg_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/dark_blue"
            android:padding="12dp"
            android:text="@string/reg_btn"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>
</RelativeLayout>
